fix footer overlap issue.

--- a/app/assets/stylesheets/api/form/form.scss
+++ b/app/assets/stylesheets/api/form/form.scss
@@ -28,10 +28,12 @@
     display: flex;
     flex-direction: column;
     padding-top: 50px;
+    margin-bottom: 50px;
 }
 
 .login-form-box {
     display: inline-block;
+    margin-bottom: 50px;
 }
 
 .email-logo {
@@ -72,7 +74,8 @@
     width: 326px;
     height: 44px;
     color: white;
-    font-size: 14px; 
+    font-size: 14px;
+    
     
 }
 
